--- a/src/Kanbas/Courses/Assignments/index.css
+++ b/src/Kanbas/Courses/Assignments/index.css
@@ -18,6 +18,9 @@
 .main {
     flex-grow: 1;
 }
+.form-control.search {
+    width: 200px;
+}
 .d-flex .btn-secondary {
     background-color: #f5f5f5;
     border-color: #c7cdd1;
